# cherry2k.sh

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.claude/standards/: constitution.md  documentation.md  git-cicd.md  rust.md  security.md  testing.md
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/phases/01-foundation-and-safety/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-single-provider-e2e/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-storage-and-session-continuity/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-zsh-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-multi-provider-support/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-command-execution-flow/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-file-operations/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/cli/: Cargo.toml
crates/cli/src/: confirm.rs  lib.rs  main.rs  signal.rs
crates/cli/src/commands/: chat.rs  config.rs  mod.rs  provider.rs  session.rs
crates/cli/src/execute/: mod.rs  output.rs  runner.rs
crates/cli/src/files/: detector.rs  diff.rs  mod.rs  proposal.rs  reader.rs  scope.rs  security.rs  writer.rs
crates/cli/src/intent/: detector.rs  mod.rs  types.rs
crates/cli/src/output/: command_display.rs  error_box.rs  markdown.rs  mod.rs  retro.rs  spinner.rs  stream_writer.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/config/: loader.rs  mod.rs  types.rs
crates/core/src/provider/: anthropic.rs  factory.rs  mod.rs  ollama.rs  openai.rs  sse.rs  system_prompts.rs  trait.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: connection.rs  context.rs  lib.rs  message.rs  schema.rs  session.rs  util.rs
zsh/: cherry2k.plugin.zsh
zsh/completions/: _cherry2k
zsh/widgets/: ai-mode.zsh  keybindings.zsh  vim-navigation.zsh
