[workspace]
resolver = "2"
members = ["crates/core", "crates/storage", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cherry2K Contributors"]
license = "MIT"
repository = "https://github.com/dunnock/cherry2k"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
directories = "5"
tempfile = "3"
clap = { version = "4.5", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
