[workspace]
resolver = "2"
members = ["crates/core", "crates/storage", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cherry2K Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/dunnock/cherry2k"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
toml = "0.9.11+spec-1.1.0"
directories = "6.0.0"
tempfile = "3.24.0"
clap = { version = "4.5.56", features = ["derive"] }
sentry = { version = "0.46.1", default-features = false, features = ["backtrace", "contexts", "panic", "tracing", "reqwest", "rustls"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
indicatif = "0.17"
termimad = "0.30"
colored = "3"
reqwest-eventsource = "0.6"
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
nix = { version = "0.30", features = ["signal"] }
regex = "1"

[workspace.lints.rust]
# Use "deny" instead of "forbid" to allow unsafe in test code
# (Rust 2024 makes env::set_var/remove_var unsafe)
unsafe_code = "deny"
