[package]
name = "cherry2k"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Zsh terminal AI assistant"

[[bin]]
name = "cherry2k"
path = "src/main.rs"

[dependencies]
cherry2k-core = { path = "../core" }
cherry2k-storage = { path = "../storage" }
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
sentry.workspace = true
dotenvy.workspace = true
indicatif.workspace = true
termimad.workspace = true
colored.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
