[package]
name = "cherry2k-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain logic and provider abstraction for Cherry2K"

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
